Fix image display

--- a/notebooks/extra_resources_for_researchers/Camera_Calibration.ipynb
+++ b/notebooks/extra_resources_for_researchers/Camera_Calibration.ipynb
@@ -13,13 +13,13 @@
     "## Extrinsic Parameters\n",
     "Extrinsic parameters are needed to transform object coordinates to a camera centered coordinate frame. To simplify this problem we use the camera pinhole model as shown in figure 1:\n",
     "\n",
-    "```{figure} Camera_Calibration/pinhole.png\n",
+    "```{figure} ./Camera_Calibration/pinhole.png\n",
     ":width: 400px\n",
     "```\n",
     "\n",
     "This is based on the principle of collinearity, where each point in the object space (X,Y,Z) is projected by a straight line through the projection center into the image plane (x,y,z). so the problem can be simplified to a simple transformation:\n",
     "\n",
-    "```{figure} Camera_Calibration/transformation.png\n",
+    "```{figure} ./Camera_Calibration/transformation.png\n",
     ":width: 400px\n",
     "```\n",
     "\n",
@@ -28,7 +28,7 @@
     "## Intrinsic Parameters\n",
     "These are parameters specific to the camera and map the coordinates from the image-plane/SSD (x,y,z) to the digital image (pixel coordinate axis with origin commonly in the upper left corner of the iamge array). Parameters often included are the focal length $(f_x, f_y)$ ,optical centers $(c_x, c_y)$, etc. The values are often stored in what we call the camera matrix:\n",
     "\n",
-    "```{figure} Camera_Calibration/matrixpng\n",
+    "```{figure} ./Camera_Calibration/matrix.png\n",
     ":width: 400px\n",
     "```\n",
     "\n",
@@ -237,11 +237,11 @@
    "source": [
     "example we obtained in the lab without cropping:\n",
     "\n",
-    "```{figure} Camera_Calibration/Picture1.png\n",
+    "```{figure} ./Camera_Calibration/Picture1.png\n",
     ":width: 400px\n",
     "```\n",
     "\n",
-    "```{figure} Camera_Calibration/Picture2.png\n",
+    "```{figure} ./Camera_Calibration/Picture2.png\n",
     ":width: 400px\n",
     "```"
    ]
