--- a/notebooks/extra_resources_for_researchers/Particle_Image_Velocimetry.ipynb
+++ b/notebooks/extra_resources_for_researchers/Particle_Image_Velocimetry.ipynb
@@ -24,11 +24,11 @@
     "\n",
     "Note that it is not a requirement to introduce tracers one self, foam, algae and other features can work as tracers as well. \n",
     "\n",
-    "```{figure} Data_PIV/drones-03-00014-g002.png\n",
+    "```{figure} ./Data_PIV/drones-03-00014-g002.png\n",
     ":width: 500px\n",
     "```\n",
     "\n",
-    "```{figure} Data_PIV/drones-03-00014-g004.png\n",
+    "```{figure} ./Data_PIV/drones-03-00014-g004.png\n",
     ":width: 500px\n",
     "```\n",
     "\n",
