--- a/_sources/coding/Intro to Python/Printing_and_formatting_statements.ipynb
+++ b/_sources/coding/Intro to Python/Printing_and_formatting_statements.ipynb
@@ -273,17 +273,17 @@
     "(printing_exercises)=\n",
     "### Exercises\n",
     "\n",
-    "1) **Print the following:**\n",
+    "______________________\n",
     "\n",
-    "Veni vidi vici"
+    "* **Print the following:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "remove-input"
     ]
    },
    "outputs": [
@@ -303,22 +303,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) **Print the following:**\n",
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
     "\n",
-    "First line\n",
     "\n",
-    "Second line\n",
+    "    print(\"Veni vidi vici\")\n",
     "\n",
-    "&emsp; BOOM!\n",
     "    \n",
-    "**HINT**: There is a '\\t' character which works like tab"
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Some characters in printing statements can be a bit tricky to handle. Think about the following:\n",
+    "__________________\n",
+    "* **Print the following:**    \n",
+    "**HINT**: There is a '\\t' character which works like tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First line\n",
+      "Second line\n",
+      "\tBOOM!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"First line\")\n",
+    "print(\"Second line\")\n",
+    "print(\"\\tBOOM!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "    print(\"First line\")\n",
+    "    print(\"Second line\")\n",
+    "    print(\"\\tBOOM!\")\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "____________\n",
+    "* Some characters in printing statements can be a bit tricky to handle. Think about the following:\n",
     "\n",
     "_\"John is a great fan of Shakespeare, so he decided to reference the famous \"Be of not the be?\" from 'The Hamlet' is his latest essay\"_\n",
     "\n",
@@ -326,17 +372,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "    print(John is a great fan of Shakespeare, so he decided to reference the famous \\“Be of not the be?\\” from \\'The Hamlet\\’ is his latest essay)\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4) **Printing can be art!** Use some characters to show your creativity! Try a triangle for example:\n"
+    "__________________\n",
+    "* **Printing can be art!** Use some characters to show your creativity! Try a triangle for example:\n",
+    "**HINT**: What about printing the backslash?\n"
    ]
   },
   {
@@ -353,18 +404,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "    print('''\n",
+    "        /\\\\\n",
+    "       /  \\\\\n",
+    "      /    \\\\\n",
+    "     /      \\\\\n",
+    "     ---------''')\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**HINT**: What about printing the backslash?\n",
-    "\n",
     "If you want more, google ASCII art, people can really go insane with those..."
    ]
   },
