--- a/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
+++ b/notebooks/coding/Intro to Python/Printing_and_formatting_statements.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "source": [
     "(printing_exercises)=\n",
-    "### Exercises\n",
+    "## Exercises\n",
     "\n",
     "______________________\n",
     "\n",
