--- a/notebooks/coding/Intro to Python/Variables.ipynb
+++ b/notebooks/coding/Intro to Python/Variables.ipynb
@@ -463,6 +463,57 @@
     "print((a > 10 and b < 10) or b > 13)\n",
     "print(a > 10 and (b < 10 or b > 13))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(variable_exercises)=\n",
+    "## Exercises\n",
+    "----------------\n",
+    "\n",
+    "* **Print** the value of the expression \\\\((a + b - c^4)  \\div  d \\\\) where\n",
+    "\\\\(a=1; b=4; c = 3; d =17\\\\), check the type of the expression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "    a = 1\n",
+    "    b = 4\n",
+    "    c, d = 3, 17\n",
+    "\n",
+    "    result = (a + b - c**4)/d\n",
+    "\n",
+    "    print(result)\n",
+    "    print(type(result))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------\n",
+    "* **Integer division**: Very popular operators in Computer Science include integer division ( // ) and modulus operator ( \\% ). Think what operation combined with type casting can result in integer division. Check the working of your operator using the equality \\\\( div(a, b) * b + a \\% b = a\\\\)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "    print(int(50/6)*6 + 50%6 == 50)\n",
+    "\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -481,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
