--- a/_sources/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
+++ b/_sources/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "source": [
     "(printing_exercises)=\n",
-    "### Exercises\n",
+    "## Exercises\n",
     "\n",
     "______________________\n",
     "\n",
