--- a/notebooks/coding/Intro to Python/2_Variables.ipynb
+++ b/notebooks/coding/Intro to Python/2_Variables.ipynb
@@ -514,6 +514,45 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_______\n",
+    "* **String slicing**: Set \\\\(a=\"Bananas\"\\\\) and \\\\(b=\"Apples\"\\\\): \n",
+    "    - concatenate the strings\n",
+    "    - take even characters from the resulting string\n",
+    "    - take the last three characters\n",
+    "\n",
+    "Print the intermediate results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "    a = \"Bananas\"\n",
+    "    b = \"Apples\"\n",
+    "\n",
+    "    c = a + b\n",
+    "    print(c)\n",
+    "    c = c[::2]\n",
+    "    print(c)\n",
+    "    c = c[-3:]\n",
+    "    print(c)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
