--- a/notebooks/mathematics/statistics/Linear_Regression.ipynb
+++ b/notebooks/mathematics/statistics/Linear_Regression.ipynb
@@ -100,7 +100,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [],
    "source": [
     "#Some imports needed for linear regression in python\n",
@@ -133,7 +137,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -239,7 +247,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,7 +287,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -318,7 +334,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -369,6 +389,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -384,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
