Add suggested changes to Dakota notebook

--- a/notebooks/z_extra_resources_for_researchers/Dakota.ipynb
+++ b/notebooks/z_extra_resources_for_researchers/Dakota.ipynb
@@ -5,8 +5,11 @@
    "metadata": {},
    "source": [
     "# Dakota\n",
+    "```{index}\n",
+    "Dakota\n",
+    "```\n",
     "\n",
-    "The dakota project provides software for optimisation and uncertainty quantification. \n",
+    "The **Dakota** project provides software for optimisation and uncertainty quantification. \n",
     "\n",
     "Dakota can be used for a broad range of computational tasks as it enables design exploration, risk analysis, model calibration, and quantification of margins and uncertainty with computational models.\n",
     "\n",
@@ -14,7 +17,7 @@
     "\n",
     "The use of these computational simulations can lead to better system designs and improved overall performance. Furthermore, a reduced dependence on physical testing can reduce development costs and quicken the design process.\n",
     "\n",
-    "In this notebook I will summarise how the Dakota library is used to automatize the parameter space investigated in a given computational model using python."
+    "In this notebook, it will be presented how the Dakota library is used to automatize the parameter space investigated in a given computational model using python programming language."
    ]
   },
   {
@@ -23,9 +26,10 @@
    "source": [
     "## Installation\n",
     "\n",
-    "Dakota can be downloaded from https://dakota.sandia.gov/download.html. For the latest release savethe tar.gv file to downloads and extract it. Make sure the file is the source code. This will be yourDakota installation directory.\n",
-    "\n",
-    "Before attempting to install dakota you must ensure you have the packages cmake and libboost in-stalled. If you dont you will have to find someone with the necessary admin rights to install these.\n",
+    "```{margin} **Necessary packages**\n",
+    "Before attempting to install Dakota you must ensure that the packages cmake and libboost are installed on your computer. If you don't, you will have to find someone with the necessary admin rights to install these. Some of the required tools and libraries are listed [here](https://dakota.sandia.gov/content/install-required-tools-and-libraries).\n",
+    "```\n",
+    "Dakota can be downloaded from [Sandia National Laboratories](https://dakota.sandia.gov/download.html) website. For the latest release, [download](https://dakota.sandia.gov/download.html) and extract a distribution file onto your computer. This tutorial will rely on the source code distribution (tar.gv files). The extracted directory will act as your Dakota installation directory.\n",
     "\n",
     "To extract the tar.gv file navigate to the file and type the following:"
    ]
@@ -44,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the file has been extracted, navigate to the unzipped Dakota source code and find the first foldercontaining a CMakeList.txt file. Once there type the following to access cmake:"
+    "Once the file has been extracted, navigate to the unzipped Dakota source code and find the first folder containing a CMakeList.txt file. Once there type the following to access cmake:"
    ]
   },
   {
@@ -60,9 +64,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the window which appears,press the c key to run configure once. Once configured scroll to CMAKE-INSTALL-PREFIX and edit the variable to something memorable. (e.g /home/name/dakota) Pressthe c key again to configure and then the g key to exit back to the terminal.\n",
+    "On the window which appears, press the c key to run configure once. Once configured scroll to CMAKE-INSTALL-PREFIX and edit the variable to something memorable (e.g /home/name/dakota). Press the c key again to configure and then the g key to exit back to the terminal.\n",
     "\n",
-    "Once back in the terminal type the following to run dakota:"
+    "Once back in the terminal type the following to install Dakota:"
    ]
   },
   {
@@ -80,7 +84,7 @@
    "source": [
     "## Python template for Dakota\n",
     "\n",
-    "To automatize the parameter space in your model using Dakota you first need to have a python script in which Dakota can adjust the parameters in the model simulations. To do this create a .py file by typing the following in the terminal."
+    "To automatize the parameter space in your model using Dakota, you first need to have a Python script in which Dakota can adjust the parameters in the model simulations. To do this create a .py file with an editor of choice:"
    ]
   },
   {
@@ -97,24 +101,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Any parameter that is meant to be changed by Dakota, needs to be put in '{ }' brackets. Dakota will evaluate changes in the response functions - print statements. In this case the print statement will be Parameter 1 and Parameter 2. This is implemented by the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Any parameter that is meant to be changed by Dakota, needs to be put in '{ }' brackets. Dakota will evaluate changes in the response functions - print statements. In this case the print statement will involve Parameter 1 and Parameter 2. This is implemented by the following:\n",
+    "\n",
     "```python\n",
     "Parameter1 = {par1}\n",
     "Parameter2 = {par2}\n",
+    "\n",
+    "print(Parameter1*Parameter2)\n",
+    "\n",
+    "```\n",
+    "```{note}\n",
+    "Dakota can automatize more parameters for more complex studies. It only allows one print statement in the Python file used as a template. You can still save plots or other useful when running the code. However, make sure to use, for example sys library to print outputs to the terminal that are not to be recognised as response functions by Dakota.\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Dakota can automatize more parameters for more complex studies."
    ]
   },
   {
@@ -123,9 +121,9 @@
    "source": [
     "## Dakota bash file\n",
     "\n",
-    "The purpose of the bash file is to allow Dakota to investigate the selected parameters in the python file. In this case the bash file, e.g file.sh, creates a copy of the python file (the template file) and using the built in function ’dprepro’ changes the values of these parameters. It then runs the python script and returns the results. \n",
+    "The purpose of the bash file is to allow Dakota to investigate the selected parameters in the python file. In this case the bash file, e.g file.sh, creates a copy of the python file (the template file) and using Dakota executable 'dprepro', changes the values of parameters in curly brackets in the code. It then runs the Python script and returns the results. \n",
     "\n",
-    "In the following bash file ’file.py’ is the previously created python file and ’file_temp.in’ is the template file."
+    "In the following bash file 'file.py', we use previously created Python file and 'file_temp.in' which is the template file (described in the next section)."
    ]
   },
   {
@@ -159,9 +157,9 @@
    "source": [
     "## Dakota input file\n",
     "\n",
-    "The Dakota input file must consist of the following blocks: environment, method, model, variables, interface and responses. Details on these blocks can be found on the Reference Manual and User’s Manual. These can be downloaded from https://dakota.sandia.gov/documentation.html.\n",
+    "The Dakota input file must consist of the following blocks: environment, method, model, variables, interface and responses. Details on these blocks can be found in the [Reference Manual and User’s Manual](https://dakota.sandia.gov/documentation.html).\n",
     "\n",
-    "As an exampple in this simple case Dakota puts values ranging between 1 and 2 instead of Parameter1 ’par1’, and values ranging between 3 and 4 instead of Parameter2 ’par2’ in the template. Then, Dakota prints out the response function according to the input parameter into the tabular file ’file.dat’."
+    "As an example, in this simple case Dakota puts values ranging between 1 and 2 instead of Parameter1 'par1', and values ranging between 3 and 4 instead of Parameter2 'par2' from the template. According to the code above, Dakota will then calculate the product of Parameter1 and Parameter2 and grab the print statement into the tabular file 'file.dat'. In this example, Dakota will use the efficient global optimisation algorithm that will guess subsequent 'par1' and 'par2' values to maximise the output, i.e. the print statement from the template file."
    ]
   },
   {
@@ -213,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the python, bash and input files have been created you can run the simulation with dakota usingthe following command line:"
+    "Once the Python, bash and input files have been created, you can run the simulation with dakota using the following command line:"
    ]
   },
   {
@@ -250,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
