--- a/_sources/coding/Intro to Python/2_Variables.ipynb
+++ b/_sources/coding/Intro to Python/2_Variables.ipynb
@@ -548,11 +548,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "----------\n",
+    "* **Lorem Ipsum**: Count the number of 'l' characters in the following text (used to fill in empty text boxes in webpage development), then count the number of words:\n",
+    "\n",
+    "*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices tempus faucibus. Mauris id porta turpis, a sodales leo. Nam fringilla dolor at tellus auctor, ut sollicitudin augue gravida. Proin vitae sem ligula. Suspendisse vel erat elit. Sed fringilla massa ut iaculis vestibulum. Fusce placerat est id felis semper facilisis.*\n",
+    "\n",
+    "**HINT**: There is a space between any two words, you can do the maths!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser \n",
+    ":class: dropdown\n",
+    "\n",
+    "    a = \"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices tempus faucibus. Mauris id porta turpis, a sodales leo. Nam fringilla dolor at tellus auctor, ut sollicitudin augue gravida. Proin vitae sem ligula. Suspendisse vel erat elit. Sed fringilla massa ut iaculis vestibulum. Fusce placerat est id felis semper facilisis.\"\n",
+    "    \n",
+    "    print(a.count('l'))\n",
+    "    print(a.count(' ') + 1)\n",
+    "\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Boolean shortcircuit**: Consider the following code:\n",
+    "\n",
+    "        def f(a):\n",
+    "            a+=1\n",
+    "            return True\n",
+    "\n",
+    "        a = 0\n",
+    "        if( 1 > 2 or f(a)):\n",
+    "            print(a)\n",
+    "        \n",
+    "f defines an increment function, what will the programme print?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "0\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
