--- a/_sources/coding/Intro to Python/3_If_statement.ipynb
+++ b/_sources/coding/Intro to Python/3_If_statement.ipynb
@@ -51,9 +51,115 @@
     "a = 1 if number == 5 else 0\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(if_statement_exercises)=\n",
+    "## Exercises\n",
+    "\n",
+    "---------------\n",
+    "\n",
+    "* **Flow of control**: What is the difference between the output of the following code samples:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bar\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "\n",
+    "if a < 5:\n",
+    "    print(\"foo\")\n",
+    "elif a == 5:\n",
+    "    print(\"bar\")\n",
+    "else:\n",
+    "    print(\"boom\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4\n",
+    "\n",
+    "if a < 5:\n",
+    "    print(\"foo\")\n",
+    "elif a == 5:\n",
+    "    print(\"bar\")\n",
+    "else:\n",
+    "    print(\"boom\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo\n",
+      "boom\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4\n",
+    "if a <5:\n",
+    "    print(\"foo\")\n",
+    "elif a == 5:\n",
+    "    print(\"bar\")\n",
+    "\n",
+    "print(\"boom\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -69,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
