while loop execises completed

--- a/notebooks/coding/Intro to Python/3_If_statement.ipynb
+++ b/notebooks/coding/Intro to Python/3_If_statement.ipynb
@@ -20,7 +20,7 @@
     "        \n",
     "_elif_ and _else_ are optional blocks. Code inside each block needs to be indented.\n",
     "\n",
-    "## Example use:"
+    "## Example use"
    ]
   },
   {
@@ -66,10 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "tags": [
-     "hide-output"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -95,10 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "tags": [
-     "hide-output"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -124,10 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "tags": [
-     "hide-output"
+     "remove-output"
     ]
    },
    "outputs": [
@@ -151,11 +151,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "First: \n",
+    "    bar\n",
+    "    \n",
+    "Second:\n",
+    "    foo\n",
+    "    \n",
+    "Third:\n",
+    "    foo\n",
+    "    boom\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
