--- a/_sources/coding/Intro to Python/4_While_loops.ipynb
+++ b/_sources/coding/Intro to Python/4_While_loops.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example:"
+    "## Example"
    ]
   },
   {
@@ -77,56 +77,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(exercise)=\n",
-    "## Exercise:\n",
+    "(while_loop_exercises)=\n",
+    "## Exercises\n",
+    "-----------\n",
     "\n",
-    "Create a _while_ loop to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Write a program** that prints all Fibonacci numbers smaller than 50. Fibonnaci sequence satifies the following:\n",
     "\n",
+    "\\\\( F_0 = 0, F_1 = 1, F_{n}=F_{n-1}+F_{n-2}\\\\)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
     "\n",
+    "    first = 0\n",
+    "    second = 1\n",
+    "\n",
+    "    print(first)\n",
+    "\n",
+    "    while second <= 50:\n",
+    "\n",
+    "        print(second)\n",
+    "        temp = first + second\n",
+    "        first = second\n",
+    "        second = temp\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------\n",
+    "\n",
+    "* **Create a _while_ loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
     "\\\\( T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) \\\\)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20.00 degrees Fahrenheit is -6.67 degrees Celsius.\n",
-      "25.00 degrees Fahrenheit is -3.89 degrees Celsius.\n",
-      "30.00 degrees Fahrenheit is -1.11 degrees Celsius.\n",
-      "35.00 degrees Fahrenheit is 1.67 degrees Celsius.\n",
-      "40.00 degrees Fahrenheit is 4.44 degrees Celsius.\n",
-      "45.00 degrees Fahrenheit is 7.22 degrees Celsius.\n",
-      "50.00 degrees Fahrenheit is 10.00 degrees Celsius.\n",
-      "55.00 degrees Fahrenheit is 12.78 degrees Celsius.\n",
-      "60.00 degrees Fahrenheit is 15.56 degrees Celsius.\n",
-      "65.00 degrees Fahrenheit is 18.33 degrees Celsius.\n",
-      "70.00 degrees Fahrenheit is 21.11 degrees Celsius.\n",
-      "75.00 degrees Fahrenheit is 23.89 degrees Celsius.\n",
-      "80.00 degrees Fahrenheit is 26.67 degrees Celsius.\n"
-     ]
-    }
-   ],
    "source": [
-    "temp_F = 20           # Initial temperature in Fahrenheit\n",
-    "dF = 5                # Increment in Fahrenheit\n",
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
     "\n",
-    "while temp_F <= 80:\n",
-    "    \n",
-    "    temp_C = 5./9.*(temp_F-32) # Calculate the temperature in Celsius\n",
-    "    \n",
-    "    # Make a nicely formatted print statement\n",
-    "    \n",
-    "    print(\"%.2f degrees Fahrenheit is %.2f degrees Celsius.\" % (temp_F, temp_C))\n",
-    "    \n",
-    "    # Add increment to the temperature so it increases with each loop\n",
-    "    \n",
-    "    temp_F = temp_F + dF"
+    "    temp_F = 20           # Initial temperature in Fahrenheit\n",
+    "    dF = 5                # Increment in Fahrenheit\n",
+    "\n",
+    "    while temp_F <= 80:\n",
+    "\n",
+    "        temp_C = 5./9.*(temp_F-32) # Calculate the temperature in Celsius\n",
+    "\n",
+    "        # Make a nicely formatted print statement\n",
+    "\n",
+    "        print(\"%.2f degrees Fahrenheit is %.2f degrees Celsius.\" % (temp_F, temp_C))\n",
+    "\n",
+    "        # Add increment to the temperature so it increases with each loop\n",
+    "\n",
+    "        temp_F = temp_F + dF\n",
+    "```"
    ]
   }
  ],
@@ -146,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
