--- a/_sources/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
+++ b/_sources/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
@@ -319,13 +319,14 @@
    "source": [
     "__________________\n",
     "* **Print the following:**    \n",
-    "**HINT**: There is a '\\t' character which works like tab"
+    "**HINT**: There are '\\t' and '\\n' which you might find useful"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
+    "scrolled": true,
     "tags": [
      "remove-input"
     ]
@@ -342,9 +343,7 @@
     }
    ],
    "source": [
-    "print(\"First line\")\n",
-    "print(\"Second line\")\n",
-    "print(\"\\tBOOM!\")"
+    "print(\"First line\\nSecond line\\n\\tBOOM!\")"
    ]
   },
   {
