--- a/_sources/geosciences/Dynamic_Earth.ipynb
+++ b/_sources/geosciences/Dynamic_Earth.ipynb
@@ -783,7 +783,7 @@
     ":width: 600px\n",
     "```\n",
     "\n",
-    "## References:\n",
+    "## References\n",
     "* Material used in this notebook was based on plate tectonics lecture content of Dynamic Earth module at Earth Science and Engineering Department"
    ]
   }
