--- a/_sources/geosciences/Keplerian_Orbits.ipynb
+++ b/_sources/geosciences/Keplerian_Orbits.ipynb
@@ -37,12 +37,12 @@
     "\n",
     "For three body problem, only in restricted cases analytical solutions can be found. One of such cases is when a test particle is placed in a system that does not move with respect to the centre of mass of the system and does not rotate with respect to itself:\n",
     "\n",
-    "```{figure} ../images/restricted_three_body_problem.png\n",
+    "```{figure} ../images/restricted_three_body_problem.PNG\n",
     ":width: 400px\n",
     "```\n",
     "The solution to this problem reveals Lagrangian equilibrium points, where the test particle will maintain its position relative to larger bodies:\n",
     "\n",
-    "```{figure} ../images/lagrangian_points.png\n",
+    "```{figure} ../images/lagrangian_points.PNG\n",
     ":width: 400px\n",
     "```\n",
     "\n",
