--- a/notebooks/mathematics/complex analysis/complex_functions.ipynb
+++ b/notebooks/mathematics/complex analysis/complex_functions.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(complex_functions)=\n",
     "# Complex functions\n",
     "\n",
     "A complex function is a function that has a subset of the complex numbers as a domain and the complex numbers as a codomain:\n",
@@ -648,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
