--- a/notebooks/mathematics/complex analysis/integrating.ipynb
+++ b/notebooks/mathematics/complex analysis/integrating.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(complex_integration)=\n",
     "# Complex integration\n",
     "\n",
     "Because of the added dimension in complex numbers compared to real numbers, where we integrated along an interval in $\\mathbb{R}$, complex functions of complex variables are integrated along contours (or paths).\n",
@@ -262,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
