--- a/notebooks/mathematics/linear_algebra/Basic_definitions_and_operations.ipynb
+++ b/notebooks/mathematics/linear_algebra/Basic_definitions_and_operations.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(linalg_basic_def)=\n",
     "# Basic definitions and operations\n",
     "\n",
     "We define a column vector $\\mathbf{x}$ with a bold lowercase letter (often \\\\( \\vec{x} \\\\) and \\\\( \\underline{x} \\\\) are used, especially in writing) and a matrix $A$ with an uppercase letter, such that\n",
@@ -734,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
