--- a/notebooks/mathematics/mathematical_notation/Tensors_Review.ipynb
+++ b/notebooks/mathematics/mathematical_notation/Tensors_Review.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(tensor_review)=\n",
     "# Review of tensors\n",
     "\n",
     "We present here an overview of tensors and tensor notations (also called suffix or index notation).\n",
@@ -156,13 +157,6 @@
     "\n",
     "$$ \\mbox{Determinant in 3D:} \\quad \\quad \\text{det}M = \\varepsilon_{ijk}m_{1i}m_{2j}m_{3k} $$\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -181,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
