--- a/notebooks/mathematics/statistics/Linear_Regression.ipynb
+++ b/notebooks/mathematics/statistics/Linear_Regression.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(linear_regress)=\n",
     "# Linear Regression\n"
    ]
   },
@@ -405,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
