Fix wrong link in ToC for Python and add link to pandas

--- a/notebooks/coding/Intro to Python/11_Functions.ipynb
+++ b/notebooks/coding/Intro to Python/11_Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(functions)=\n",
+    "(functions_python)=\n",
     "# Creating custom functions\n",
     "``` {index} Creating functions\n",
     "```\n",
